Convert all possible anonymous classes to Java 8 lambda syntax.
Summary:
Uses intellij's lambda syntax inspection.

Some of the produced code is formatted funny, but at least no lines are over 100 chars...

Test Plan: CI

Reviewed By: Coneko

fbshipit-source-id: 2afbdeb